Fix vertical overflow

--- a/src/main/webapp/META-INF/resources/css/summary.css
+++ b/src/main/webapp/META-INF/resources/css/summary.css
@@ -105,7 +105,7 @@
     padding: 0.4em 0;
     margin-left: 3px;
 }
-.ui-grid-row:not(.header-row):after {
+.ui-grid-row:not(.header-row):not(:last-child):after {
     content:"";
     border-bottom: 1px solid #4F4F4F;
     width: 100%;
@@ -126,7 +126,7 @@
 
 #timelineControls {
     position: fixed;
-    bottom: 0.3em;
+    bottom: 0.6em;
     z-index: 1;
     font-size: .76em;
     -webkit-transition: bottom 1s;
@@ -143,7 +143,7 @@
     display: inline-block;
     padding: 0.3em;
     border-radius: 0.3em;
-    margin-right: 0.3em;
+    margin-right: 0.6em;
 }
 #timelineControls a:hover {
     color: #fa4;
@@ -176,6 +176,7 @@
     }
     .ui-grid.ui-grid-responsive-480 .ui-grid-row > div {
         width:100%;
+        width: calc(100% - 2em);
         float:none;
     }
     .ui-grid.ui-grid-responsive-480 .ui-grid-row > .ui-grid-col-5 {
